--- a/{{cookiecutter.project_slug}}/mobile/package.json
+++ b/{{cookiecutter.project_slug}}/mobile/package.json
@@ -4,15 +4,14 @@
   "private": true,
   "main": "index.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
-    "web": "expo start --web"
+    "start": "expo start --android",
+    "android": "expo run:android"
   },
   "dependencies": {
     "expo": "~52.0.0",
     "expo-router": "^4.0.0",
     "expo-secure-store": "~13.0.0",
+    "expo-constants": "~17.0.0",
     "react": "18.3.1",
     "react-native": "0.76.0",
     "@react-navigation/native": "^6.1.17",
